--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "@braks/revue-draggable": "0.4.1",
+    "@rajesh896/broprint.js": "^2.1.1",
+    "vue": "^3.0.0",
+    "vue-panzoom": "^1.1.6",
+    "wink-eng-lite-web-model": "^1.4.3",
+    "wink-nlp": "^1.12.3",
+    "wink-nlp-utils": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
